Make UI Consistent and Uniform

--- a/app/src/main/res/drawable/bg_squircle_50.xml
+++ b/app/src/main/res/drawable/bg_squircle_50.xml
@@ -5,5 +5,5 @@
     <solid
         android:color="@color/accent_50" />
     <corners
-        android:radius="@dimen/corner_radius" />
+        android:radius="@dimen/radius_md" />
 </shape>
