--- a/app/src/main/res/menu/menu_main_bottom.xml
+++ b/app/src/main/res/menu/menu_main_bottom.xml
@@ -9,9 +9,9 @@
     <item
         android:id="@+id/frgMainQR"
         android:title="@string/nav_qr"
-        android:icon="@drawable/ic_nav_qr"/>
+        android:icon="@drawable/ic_nav_learn"/>
     <item
         android:id="@+id/frgMainSettings"
-        android:icon="@drawable/ic_nav_settings"
+        android:icon="@drawable/ic_nav_profile"
         android:title="@string/nav_settings" />
 </menu>
