--- a/app/src/main/res/drawable/bg_textfield_default.xml
+++ b/app/src/main/res/drawable/bg_textfield_default.xml
@@ -6,5 +6,5 @@
     <stroke
         android:width="1dp"
         android:color="@color/neutral_400" />
-    <corners android:radius="@dimen/corner_radius" />
+    <corners android:radius="@dimen/radius_md" />
 </shape>
