--- a/app/src/main/res/layout/act_login.xml
+++ b/app/src/main/res/layout/act_login.xml
@@ -6,56 +6,91 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imgDialogLogo"
-        style="@style/Circle_Lg_50"
-        android:layout_marginTop="58dp"
-        android:padding="@dimen/ic_p"
-        android:scaleType="centerInside"
-        android:src="@drawable/logo_hygeia"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
+<!--    <ImageView-->
+<!--        android:id="@+id/imgDialogLogo"-->
+<!--        style="@style/Circle_Sm_300"-->
+<!--        android:layout_marginStart="@dimen/mx"-->
+<!--        android:layout_marginTop="8dp"-->
+<!--        android:padding="8dp"-->
+<!--        android:scaleType="centerInside"-->
+<!--        android:src="@drawable/logo_hygeia"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck" />-->
 
     <TextView
-        android:id="@+id/txtBrandName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/spoof_bold"
+        android:id="@+id/lblHeadingRegular"
+        style="@style/Text_H1_Regular"
+        android:text="@string/h1_welcome"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/lblHeadingColored"
+        style="@style/Text_H1_Colored"
         android:text="@string/app_name_lower"
-        android:textColor="@color/accent_500"
-        android:textSize="@dimen/text_xl"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imgDialogLogo" />
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular" />
 
     <TextView
-        android:id="@+id/lblBrandCatchphrase"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        android:lineHeight="22dp"
+        android:id="@+id/lblDescription"
+        style="@style/Text_Description"
         android:text="@string/desc_login"
-        android:textAlignment="center"
-        android:textColor="@color/neutral_500"
-        android:textSize="@dimen/text_md"
-        app:layout_constraintEnd_toEndOf="@+id/txtBrandName"
-        app:layout_constraintStart_toStartOf="@+id/txtBrandName"
-        app:layout_constraintTop_toBottomOf="@+id/txtBrandName"
-        tools:ignore="UnusedAttribute" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored" />
+
+    <!--    <ImageView-->
+<!--        android:id="@+id/imgDialogLogo"-->
+<!--        style="@style/Circle_Lg_50"-->
+<!--        android:layout_marginTop="58dp"-->
+<!--        android:padding="@dimen/ic_p"-->
+<!--        android:scaleType="centerInside"-->
+<!--        android:src="@drawable/logo_hygeia"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/txtBrandName"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:fontFamily="@font/spoof_bold"-->
+<!--        android:text="@string/app_name_lower"-->
+<!--        android:textColor="@color/accent_500"-->
+<!--        android:textSize="@dimen/text_xxl"-->
+<!--        app:layout_constraintEnd_toEndOf="parent"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/imgDialogLogo" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/lblBrandCatchphrase"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_marginTop="4dp"-->
+<!--        android:lineHeight="24sp"-->
+<!--        android:text="@string/desc_login"-->
+<!--        android:textAlignment="center"-->
+<!--        android:textColor="@color/neutral_500"-->
+<!--        android:textSize="@dimen/text_md"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/txtBrandName"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/txtBrandName"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/txtBrandName"-->
+<!--        tools:ignore="UnusedAttribute" />-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtLayoutEmail"
         style="@style/Txt_Layout_Primary"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="@dimen/elmnt_gap_xl"
         android:hint="@string/title_email"
-        app:helperTextTextColor="@color/danger_500"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblBrandCatchphrase">
+        app:layout_constraintTop_toBottomOf="@+id/lblDescription">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtEmail"
