--- a/app/src/main/res/layout/act_top_up.xml
+++ b/app/src/main/res/layout/act_top_up.xml
@@ -56,7 +56,7 @@
             android:fontFamily="@font/roboto"
             android:text="@string/data_balance"
             android:textColor="@color/neutral_900"
-            android:textSize="@dimen/text_xl"
+            android:textSize="@dimen/text_xxl"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/lblTitleBalance"
             app:layout_constraintStart_toStartOf="@+id/lblTitleBalance"
