--- a/app/src/main/res/layout/dlg_loading.xml
+++ b/app/src/main/res/layout/dlg_loading.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="@dimen/corner_radius">
+    app:cardCornerRadius="@dimen/radius_md">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
