--- a/app/src/main/res/layout/frg_reset_password.xml
+++ b/app/src/main/res/layout/frg_reset_password.xml
@@ -29,37 +29,45 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/lblHeadingRegular" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/containerDescription"
-        style="@style/Container_Description"
-        android:padding="@dimen/container_desc_p"
+    <TextView
+        android:id="@+id/lblDescription"
+        style="@style/Text_Description"
+        android:text="@string/desc_update_password"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored">
+        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored"
+        tools:ignore="VisualLintLongText" />
 
-        <ImageView
-            android:id="@+id/imgDescription"
-            android:layout_width="@dimen/ic_sm"
-            android:layout_height="@dimen/ic_sm"
-            android:src="@drawable/ic_info"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/containerDescription"-->
+<!--        style="@style/Container_Description"-->
+<!--        android:padding="@dimen/container_desc_p"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@+id/lblHeadingColored">-->
 
-        <TextView
-            android:id="@+id/lblDescription"
-            style="@style/Text_Regular"
-            android:layout_marginStart="@dimen/text_desc_ml"
-            android:layout_marginTop="@dimen/text_desc_mt"
-            android:layout_marginBottom="@dimen/text_desc_mb"
-            android:text="@string/desc_update_password"
-            android:textColor="@color/neutral_900"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imgDescription"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:ignore="VisualLintLongText" />
+<!--        <ImageView-->
+<!--            android:id="@+id/imgDescription"-->
+<!--            android:layout_width="@dimen/ic_sm"-->
+<!--            android:layout_height="@dimen/ic_sm"-->
+<!--            android:src="@drawable/ic_info"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            tools:ignore="ContentDescription,ImageContrastCheck,SpeakableTextPresentCheck" />-->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        <TextView-->
+<!--            android:id="@+id/lblDescription"-->
+<!--            style="@style/Text_Regular"-->
+<!--            android:layout_marginStart="@dimen/text_desc_ml"-->
+<!--            android:text="@string/desc_update_password"-->
+<!--            android:textColor="@color/neutral_900"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/imgDescription"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            tools:ignore="VisualLintLongText" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/txtLayoutPassword"
@@ -67,11 +75,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="@string/title_password_new"
+        android:layout_marginTop="@dimen/elmnt_gap_xl"
         app:endIconDrawable="@drawable/ic_eye_selector"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/containerDescription">
+        app:layout_constraintTop_toBottomOf="@+id/lblDescription">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/txtPassword"
