--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.Hygeia" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
@@ -15,20 +15,19 @@
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowLightStatusBar">true</item>
         <!-- Customize your theme here. -->
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/lato</item>
         <item name="android:textSize">@dimen/text_md</item>
     </style>
 
     <!--BUTTONS STYLE-->
     <style name="Btn_Primary" parent="Widget.MaterialComponents.Button">
-        <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="cornerRadius">@dimen/radius_md</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:letterSpacing">0.06</item>
         <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">@dimen/btn_inset_y</item>
         <item name="android:insetBottom">@dimen/btn_inset_y</item>
-        <item name="android:layout_height">@dimen/elmnt_y</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:layout_marginBottom">@dimen/btn_mb</item>
@@ -36,22 +35,20 @@
     </style>
 
     <style name="Btn_Secondary" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="cornerRadius">@dimen/corner_radius</item>
-        <item name="android:fontFamily">@font/roboto_bold</item>
+        <item name="cornerRadius">@dimen/radius_md</item>
+        <item name="android:fontFamily">@font/lato_bold</item>
         <item name="android:textColor">@color/neutral_900</item>
         <item name="android:textAllCaps">false</item>
-        <item name="android:letterSpacing">0.06</item>
-        <item name="android:stateListAnimator">@null</item>
         <item name="android:insetTop">@dimen/btn_inset_y</item>
         <item name="android:insetBottom">@dimen/btn_inset_y</item>
-        <item name="android:layout_height">@dimen/elmnt_y</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
     </style>
 
     <style name="Btn_Text" parent="Widget.MaterialComponents.Button.TextButton">
         <item name="android:textAllCaps">false</item>
-        <item name="cornerRadius">@dimen/corner_radius</item>
+        <item name="cornerRadius">@dimen/radius_md</item>
         <item name="android:textStyle">bold</item>
     </style>
 
@@ -127,7 +124,7 @@
         <item name="prefixTextAppearance">@style/Txt_Layout_Primary_Prefix</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
-        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap_md</item>
         <item name="errorIconDrawable">@null</item>
     </style>
 
@@ -135,12 +132,12 @@
         <item name="shapeAppearanceOverlay">@style/Txt_Layout_Primary_Shape</item>
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
-        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap_md</item>
         <item name="errorIconDrawable">@null</item>
     </style>
 
     <style name="Txt_Layout_Primary_Shape">
-        <item name="cornerSize">@dimen/corner_radius</item>
+        <item name="cornerSize">@dimen/radius_md</item>
     </style>
 
     <style name="Txt_Layout_Primary_Prefix">
@@ -166,8 +163,8 @@
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:layout_marginTop">@dimen/h_mt</item>
-        <item name="android:fontFamily">@font/spoof_regular</item>
-        <item name="android:textSize">@dimen/text_xl</item>
+        <item name="android:fontFamily">@font/spoof_bold</item>
+        <item name="android:textSize">@dimen/text_xxl</item>
         <item name="android:textColor">@color/neutral_900</item>
     </style>
 
@@ -177,8 +174,8 @@
         <item name="android:layout_marginStart">@dimen/mx</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:layout_marginTop">@dimen/line_spacing</item>
-        <item name="android:fontFamily">@font/spoof_regular</item>
-        <item name="android:textSize">@dimen/text_xl</item>
+        <item name="android:fontFamily">@font/spoof_bold</item>
+        <item name="android:textSize">@dimen/text_xxl</item>
         <item name="android:textColor">@color/accent_500</item>
     </style>
 
@@ -188,20 +185,28 @@
         <item name="android:layout_marginStart">8dp</item>
         <item name="android:layout_marginEnd">@dimen/mx</item>
         <item name="android:fontFamily">@font/spoof_bold</item>
-        <item name="android:textSize">@dimen/text_xl</item>
+        <item name="android:textSize">@dimen/text_xxl</item>
         <item name="android:textColor">@color/accent_500</item>
     </style>
 
     <style name="Text_H6" parent="Widget.AppCompat.TextView">
         <item name="android:textColor">@color/neutral_900</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap_md</item>
+    </style>
+
+    <style name="Text_H6_Title" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/mx</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap_xl</item>
+        <item name="android:textColor">@color/neutral_900</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:layout_marginTop">@dimen/elmnt_gap</item>
     </style>
 
     <style name="Text_Regular" parent="Widget.AppCompat.TextView">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">@font/roboto</item>
+        <item name="android:fontFamily">@font/lato</item>
         <item name="android:textSize">@dimen/text_md</item>
         <item name="android:textColor">@color/neutral_500</item>
     </style>
@@ -211,6 +216,16 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_marginEnd">@dimen/pg_num_end</item>
         <item name="android:textColor">@color/neutral_900</item>
+    </style>
+
+    <style name="Text_Description" parent="Widget.AppCompat.TextView">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginStart">@dimen/mx</item>
+        <item name="android:layout_marginEnd">@dimen/mx</item>
+        <item name="android:layout_marginTop">@dimen/elmnt_gap_lg</item>
+        <item name="android:textColor">@color/neutral_900</item>
+        <item name="android:lineHeight" tools:targetApi="p">20dp</item>
     </style>
 
     <style name="Lbl_PageTitle" parent="Widget.AppCompat.TextView">
@@ -237,6 +252,18 @@
         <item name="trackThickness">@dimen/progress_thick</item>
         <item name="trackColor">@color/neutral_300</item>
         <item name="indicatorColor">@color/neutral_900</item>
-        <item name="trackCornerRadius">@dimen/corner_radius</item>
+        <item name="trackCornerRadius">@dimen/radius_md</item>
     </style>
+
+    <!--CARDS-->
+    <style name="Card_Wallet" parent="Widget.MaterialComponents.CardView">
+        <item name="android:layout_width">@dimen/card_wallet_width</item>
+        <item name="android:layout_height">@dimen/card_wallet_height</item>
+        <item name="android:layout_marginStart">@dimen/card_wallet_mx</item>
+        <item name="android:layout_marginEnd">@dimen/card_wallet_mx</item>
+        <item name="android:layout_marginTop">@dimen/card_wallet_mt</item>
+        <item name="cardCornerRadius">@dimen/radius_lg</item>
+        <item name="cardElevation">@dimen/card_wallet_elevation</item>
+    </style>
+
 </resources>
