--- a/app/src/main/res/layout/dlg_confirmation.xml
+++ b/app/src/main/res/layout/dlg_confirmation.xml
@@ -66,7 +66,7 @@
             android:layout_marginBottom="20dp"
             android:insetTop="5dp"
             android:insetBottom="5dp"
-            android:text="@string/btn_okay"
+            android:text="@string/btn_yes"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btnDlgConfirmSecondary"
@@ -84,7 +84,7 @@
             android:layout_marginBottom="20dp"
             android:insetTop="5dp"
             android:insetBottom="5dp"
-            android:text="@string/btn_okay"
+            android:text="@string/btn_no"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/btnDlgConfirmPrimary"
             app:layout_constraintStart_toStartOf="parent"
