--- a/app/src/main/res/layout/dlg_message.xml
+++ b/app/src/main/res/layout/dlg_message.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     app:cardBackgroundColor="@color/white"
-    app:cardCornerRadius="@dimen/radius_md">
+    app:cardCornerRadius="@dimen/radius_lg">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
